ros2_ws/log/build_2020-10-10_23-02-13/atl_blockly_ide_py_pkg/stderr.log
  File "/home/autretechlab/Documents/GitHub/ALT_Robotics_IDE/ros2_ws/install/atl_blockly_ide_py_pkg/lib/python3.8/site-packages/atl_blockly_ide_py_pkg/atl_ide_webappserver.py", line 29
    def get(self, 'path'):
                  ^
SyntaxError: invalid syntax

